# wengine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: g_defs.c  g_defs.h  g_sdl.c  g_sdl.h  game.c  logger.c  main_host.c  main_module.c  player.c  player.h  render.c  render.h  update.c  update.h
src/host/: main_host.c
src/utils/: defs.h  logger.h
